fix: 코드 간소화

--- a/src/scripts/week13.ipynb
+++ b/src/scripts/week13.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +90,8 @@
     }
    ],
    "source": [
-    "x = np.arange(len(similarity))\n",
     "doc_name = [f\"docs{i + 1}={similarity[i]:.2f}\" for i in range(len(similarity))]\n",
-    "plt.bar(x, similarity)\n",
-    "plt.xticks(x, doc_name)\n",
+    "plt.bar(doc_name, similarity)\n",
     "plt.show()"
    ]
   }
